changed where images go, created an array for games, made it so a for loop puts a button on for each game.  Working on the AJAX pull

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,18 @@
     <title>GIPHY search</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- buttons go here -->
-    <div class="button"></div>
-
-    <!-- Images go here -->
-    <div class="image"></div>
+    <div class="button" id="buttons"></div>
 
     <!-- Search Box -->
 
-    <input type="text" placeholder="Search" size="50" class="right">
+    <input type="text" placeholder="Search" size="50" class="right" id="search">
     <button class="right">Search</button>
+
+    <!-- Images go here -->
+    <div class="image"></div>
 
 
     <!-- jquery -->
@@ -25,4 +27,5 @@
     <!-- javascript -->
     <script src="assets/javascript/app.js"></script>
 </body>
+
 </html>
