giphy search pulls down images and puts them on the page.  All show up still (by design).

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="right">Search</button>
 
     <!-- Images go here -->
-    <div class="image"></div>
+    <div id="image"></div>
 
 
     <!-- jquery -->
