Search adds new button with the search term.  changed the clicking a button to a document.on('click') function so that it would read new buttons being created.  Good enough to fulfill class assignment, could use some more work/styling though.  :(

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Search Box -->
 
     <input type="text" placeholder="Search" size="35" class="right" id="search">
-    <button class="right">Search</button>
+    <button class="right" id="makeButton">Search</button>
 
     <!-- Images go here -->
     <div id="image"></div>
